# dangorun

./: Cargo.toml  LICENSE  README.md  README.zh_CN.md
.github/workflows/: release.yml
maps/: group.txt  knockout.txt
src/: cli.rs  dango.rs  logging.rs  main.rs  map.rs  sim.rs  skill.rs
src/cli/: args.rs  presets.rs  prompt.rs
src/dango/: abby.rs  aemeath.rs  augusta.rs  calcharo.rs  carlotta.rs  cartethyia.rs  changli.rs  chisa.rs  denia.rs  hiyuki.rs  iuno.rs  jinhsi.rs  luuk.rs  lynae.rs  mornye.rs  phoebe.rs  phrolova.rs  shorekeeper.rs  sigrika.rs
