[package]
name = "dangorun"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.19"
color-eyre = "0.6.5"
demand = "2.0.2"
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
indexmap = "2.14.0"
log = "0.4.29"
logcall = "0.1.13"
logforth = { version = "0.29.1", features = ["starter-log"] }
pastey = "0.2.3"
rand = { version = "0.10.1", features = ["chacha"] }
strum = { version = "0.28.0", features = ["derive"] }
twox-hash = "2.1.2"

[profile.release]
opt-level = 2
lto = "thin"
panic = "abort"
strip = true

[profile.ci]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "s"
